Workflow styling and ie6 fixes - Actions in workflow & task list now working in ie6 (always displayed) & ie7 (visisble on mouse hover) - Cancel workflow has an icon and was aligned to the left
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@22582 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 1cc0e6dde92709b7cf42e302433c593e402c5c27

--- a/root/projects/slingshot/source/web/components/workflow/workflow-details-actions.css
+++ b/root/projects/slingshot/source/web/components/workflow/workflow-details-actions.css
@@ -2,3 +2,9 @@
 {
    text-align: center;
 }
+
+.workflow-details-actions .actions span.first-child
+{
+   background: url("../images/workflow-16.png") no-repeat scroll 12px 4px transparent;
+   padding-left: 22px;
+}
